[package]
name = "niri-bjuwk"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
itertools = "0.14.0"
jaq-all = { version = "0.1.0" }
jaq-json = { version = "2.0.0", features = ["serde"] }
niri-ipc = "=26.4.0"
scopeguard = "1.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
smol_str = "0.3"
thiserror = "2"
